examples/test/testpolicy8569.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8569
  namespace: namespace490
spec:
  podSelector:
    matchLabels:
      key24: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value30
          key16: value27
      podSelector:
        matchLabels:
          key42: value36
          key1: value46
          key11: value26
